@@ -104,3 +104,4 @@ Fixes:
     * Fix ecore_con case where freeing server double-frees clients
     * Fix build of Evas XCB backend
     * Fix efreet desktop command parsing of https
+    * Fix eina_prefix_new() with debian multilib without magic check file.
